Add join functionality to pop person canvas and API schema
